--- a/.github/workflows/build-compiler-master-ssl-tag.yml
+++ b/.github/workflows/build-compiler-master-ssl-tag.yml
@@ -18,7 +18,7 @@ jobs:
       - name: login docker hub
         run: docker login -u ${{ secrets.name }} -p ${{ secrets.pass }}
       - name: Build ssl docker
-        run: cd doc && docker build . -f base-compiler-ssl.Dockerfile -t tarscloud/base-compiler-ssl:${{ steps.get_version.outputs.VERSION }} --build-arg BRANCH=master
+        run: cd compiler && docker build . -f base-compiler-ssl.Dockerfile -t tarscloud/base-compiler-ssl:${{ steps.get_version.outputs.VERSION }} --build-arg BRANCH=master
       - name: push master ssl docker
         run: docker push tarscloud/base-compiler-ssl:${{ steps.get_version.outputs.VERSION }}
 
