--- a/.github/workflows/build-compiler-release-3.0.yml
+++ b/.github/workflows/build-compiler-release-3.0.yml
@@ -7,22 +7,20 @@ on:
       - master
     paths:
       - ".github/workflows/build-compiler-release-3.0.yml"
-      - "doc/tools/*"
-      - "doc/tools/yaml-tools/*"
-      - "doc/tools/helm-template/*"
-      - "doc/tools/helm-lib/*"
-      - "doc/base-compiler.Dockerfile"
+      - "compiler/tools/*"
+      - "compiler/tools/yaml-tools/*"
+      - "compiler/tools/helm-template/*"
+      - "compiler/tools/helm-lib/*"
+      - "compiler/base-compiler.Dockerfile"
   pull_request:
     branches:
       - master
     paths:
       - ".github/workflows/build-compiler-release-3.0.yml"
-      - "doc/tools/*"
-      - "doc/tools/helm-template/*"
-      - "doc/tools/helm-lib/*"
-      - "doc/base-compiler.Dockerfile"
-  schedule:
-    - cron: '0 05 * * *'
+      - "compiler/tools/*"
+      - "compiler/tools/helm-template/*"
+      - "compiler/tools/helm-lib/*"
+      - "compiler/base-compiler.Dockerfile"
       
 jobs:
   build:
@@ -36,7 +34,7 @@ jobs:
       - name: login docker hub
         run: docker login -u ${{ secrets.name }} -p ${{ secrets.pass }}
       - name: Build docker
-        run: cd doc && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:v3.0 --build-arg BRANCH=release/3.0
+        run: cd compiler && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:v3.0 --build-arg BRANCH=release/3.0
       - name: push release/3.0 docker
         run: docker push tarscloud/base-compiler:v3.0
 
