REGISTRY_URL: docker.io/

--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -11,7 +11,7 @@ jobs:
 
     runs-on: ubuntu-20.04 
     env:
-      REGISTRY_URL: tarscloud
+      REGISTRY_URL: docker.io/tarscloud
       REGISTRY_USER: ${{ secrets.name }} 
       REGISTRY_PASSWORD: ${{ secrets.pass }}
       BUILD_VERSION: latest
