--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -2,10 +2,10 @@ name: e2e
 on:
   push:
     branches: [ master ]
-    paths-ignore: [ docs,charts ]
+    paths-ignore: [ docs/**,charts/** ]
   pull_request:
     branches: [ master ]
-    paths-ignore: [ docs,charts ]
+    paths-ignore: [ docs/**,charts/** ]
 
 jobs:
   e2e:
