--- a/src/NodeServer/CMakeLists.txt
+++ b/src/NodeServer/CMakeLists.txt
@@ -1,7 +1,8 @@
 include_directories(../RegistryServer)
+include_directories(../AdminRegistryServer)
 
 gen_server(tars tarsnode)
 
-add_dependencies(tarsnode tarsregistry)
+add_dependencies(tarsnode tarsregistry tarsAdminRegistry)
 
 target_link_libraries(tarsnode )
