--- a/src/NodeServer/CMakeLists.txt
+++ b/src/NodeServer/CMakeLists.txt
@@ -3,6 +3,6 @@ include_directories(../AdminRegistryServer)
 
 gen_server(tars tarsnode)
 
-add_dependencies(tarsnode tarsregistry tarsAdminRegistry)
+add_dependencies(tarsnode tarsregistry tarsadminregistry)
 
 target_link_libraries(tarsnode )
