--- a/helm/tarsframework/templates/tars-tarsadminregistry.yaml
+++ b/helm/tarsframework/templates/tars-tarsadminregistry.yaml
@@ -1,3 +1,39 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: tars-tarsadminregistry
+  namespace: {{.Release.Namespace}}
+---
+
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: tars-tarsadminregistry
+  namespace: {{.Release.Namespace}}
+rules:
+  - apiGroups: [ "" ]
+    resources: [ pods ]
+    verbs: [ get ,list, watch ]
+  - apiGroups: [ k8s.tars.io ]
+    resources: [ tconfigs ]
+    verbs: [ get ,list, watch ]
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: tars-tarsadminregistry
+  namespace: {{.Release.Namespace}}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: tars-tarsadminregistry
+subjects:
+  - kind: ServiceAccount
+    name: tars-tarsadminregistry
+    namespace: {{.Release.Namespace}}
+---
+
 apiVersion: k8s.tars.io/{{ .Chart.AppVersion }}
 kind: TImage
 metadata:
@@ -22,46 +58,25 @@ kind: TServer
 metadata:
   name: tars-tarsadminregistry
   namespace: {{.Release.Namespace}}
+  annotations:
+    tars.io/MinReplicas: "1"
   labels:
     tars.io/ServerApp: tars
     tars.io/ServerName: tarsadminregistry
     tars.io/SubType: tars
-    tars.io/Template: tars.es
+    tars.io/Template: tars.default
 spec:
   app: tars
   server: tarsadminregistry
   subType: tars
   tars:
-    template: tars.es
-    profile: |
-      <tars>
-      	<log>
-          logpath=/usr/local/app/tars/remote_app_log
-          logthread=10
-          compressed=true
-          <format>
-            hour=xx
-          </format>
-        </log>
-        <elk>
-          # protocol connect to es
-          protocol=http
-          <nodes>
-            # es node address
-            tars-elasticsearch:9200
-          </nodes>
-          log_dir=/usr/local/app/tars/remote_app_log/_tars_/_trace_
-        </elk>
-      </tars>
+    template: tars.cpp
     servants:
-      - name: LogObj
+      - name: AdminRegObj
         port: 12111
-        thread: 5
-      - name: TopologyObj
-        port: 13030
-        thread: 3
   k8s:
     replicas: 1
+    serviceAccount: tars-tarsadminregistry
     env:
       - name: Namespace
         valueFrom:
@@ -79,13 +94,8 @@ spec:
             type: DirectoryOrCreate
         mountPath: /usr/local/app/tars/app_log
         subPathExpr: $(Namespace)/$(PodName)
-      - mountPath: /usr/local/app/tars/remote_app_log
-        name: remote-log-dir
-        source:
-          tLocalVolume: { }
-        subPathExpr: $(PodName)
   release:
-    id: {{.Values.framework.tag | quote }}
+    id: {{.Values.framework.tag }}
     image: "{{.Values.framework.registry }}/tars.tarsadminregistry:{{.Values.framework.tag}}"
     {{- if.Values.framework.secret}}
     secret: {{.Values.framework.secret |quote }}
