--- a/src/AdminRegistryServer/CMakeLists.txt
+++ b/src/AdminRegistryServer/CMakeLists.txt
@@ -2,6 +2,6 @@
 include_directories(../ThirdParty/asio/include)
 include_directories(../ThirdParty/rapidjson/include)
 
-gen_server(tars tarsadminregistry)
+gen_server(tars tarsAdminRegistry)
 
-target_link_libraries(tarsadminregistry  k8sclient ssl)
+target_link_libraries(tarsAdminRegistry  k8sclient ssl)
