--- a/helm/tarscontroller/crds/TPlugin.yaml
+++ b/helm/tarscontroller/crds/TPlugin.yaml
@@ -1,18 +1,18 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: tgateways.k8s.tars.io
+  name: tplugins.k8s.tars.io
 spec:
   conversion:
     strategy: None
   group: k8s.tars.io
   names:
-    kind: TGateway
-    listKind: TGatewayList
-    plural: tgateways
-    singular: tgateway
+    kind: TPlugin
+    listKind: TPluginList
+    plural: tplugins
+    singular: tplugin
     shortNames:
-      - tg
+      - tp
   scope: Namespaced
   versions:
     - name: v1beta1
@@ -25,18 +25,16 @@ spec:
             spec:
               type: object
               properties:
+                name:
+                  type: string
+                name_en:
+                  type: string
                 obj:
                   type: string
-                update_person:
+                type:
+                  type: integer
+                path:
                   type: string
-                update_time:
-                  type: string
-                  format: date-time
-                extra:
-                  type: array
-                  items:
-                    type: string
-                    maxLength: 1024
     - name: v1beta2
       served: true
       storage: false
@@ -47,18 +45,16 @@ spec:
             spec:
               type: object
               properties:
+                name:
+                  type: string
+                name_en:
+                  type: string
                 obj:
                   type: string
-                update_person:
+                type:
+                  type: integer
+                path:
                   type: string
-                update_time:
-                  type: string
-                  format: date-time
-                extra:
-                  type: array
-                  items:
-                    type: string
-                    maxLength: 1024
     - name: v1beta3
       served: true
       storage: true
@@ -69,15 +65,13 @@ spec:
             spec:
               type: object
               properties:
+                name:
+                  type: string
+                name_en:
+                  type: string
                 obj:
                   type: string
-                update_person:
+                type:
+                  type: integer
+                path:
                   type: string
-                update_time:
-                  type: string
-                  format: date-time
-                extra:
-                  type: array
-                  items:
-                    type: string
-                    maxLength: 1024
