Fix: tars admin get auth list from tarsweb

--- a/src/NodeServer/CMakeLists.txt
+++ b/src/NodeServer/CMakeLists.txt
@@ -1,8 +1,7 @@
 include_directories(../RegistryServer)
-include_directories(../AdminRegistryServer)
 
 gen_server(tars tarsnode)
 
-add_dependencies(tarsnode tarsregistry tarsAdminRegistry)
+add_dependencies(tarsnode tarsregistry)
 
 target_link_libraries(tarsnode )
