--- a/src/AdminRegistryServer/CMakeLists.txt
+++ b/src/AdminRegistryServer/CMakeLists.txt
@@ -1,7 +1,9 @@
 
 include_directories(../ThirdParty/asio/include)
 include_directories(../ThirdParty/rapidjson/include)
+include_directories(../NodeServer)
+include_directories(../RegistryServer)
 
 gen_server(tars tarsAdminRegistry)
 
-target_link_libraries(tarsAdminRegistry  k8sclient ssl)
+add_dependencies(tarsAdminRegistry tarsnode)
