--- a/.github/workflows/build-compiler-master-ssl-tag.yml
+++ b/.github/workflows/build-compiler-master-ssl-tag.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04 
+    runs-on: ubuntu-20.04
     steps:
       - name: env
         run: env
@@ -17,9 +17,11 @@ jobs:
       - uses: actions/checkout@v1
       - name: login docker hub
         run: docker login -u ${{ secrets.name }} -p ${{ secrets.pass }}
+      - name: prepare docker
+        run: |
+          export DOCKER_CLI_EXPERIMENTAL=enabled 
+          docker buildx create --use --name builder
+          docker buildx inspect builder --bootstrap
+          docker run --rm --privileged docker/binfmt:a7996909642ee92942dcd6cff44b9b95f08dad64
       - name: Build ssl docker
-        run: cd compiler && docker build . -f base-compiler-ssl.Dockerfile -t tarscloud/base-compiler-ssl:${{ steps.get_version.outputs.VERSION }} --build-arg BRANCH=master
-      - name: push master ssl docker
-        run: docker push tarscloud/base-compiler-ssl:${{ steps.get_version.outputs.VERSION }}
-
-
+        run: cd compiler && docker buildx build . -f base-compiler-ssl.Dockerfile -t tarscloud/base-compiler-ssl:${{ steps.get_version.outputs.VERSION }} --build-arg BRANCH=master --platform=linux/amd64,linux/arm64  -o type=docker --push
