--- a/.github/workflows/build-compiler-master-ssl.yml
+++ b/.github/workflows/build-compiler-master-ssl.yml
@@ -23,18 +23,18 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04 
+    runs-on: ubuntu-20.04
     steps:
       - name: env
         run: env
       - uses: actions/checkout@v1
       - name: login docker hub
         run: docker login -u ${{ secrets.name }} -p ${{ secrets.pass }}
+      - name: prepare docker
+        run: |
+          export DOCKER_CLI_EXPERIMENTAL=enabled 
+          docker buildx create --use --name builder
+          docker buildx inspect builder --bootstrap
+          docker run --rm --privileged docker/binfmt:a7996909642ee92942dcd6cff44b9b95f08dad64
       - name: Build ssl docker
-        run: cd compiler && docker build . -f base-compiler-ssl.Dockerfile -t tarscloud/base-compiler-ssl:master --build-arg BRANCH=master
-      - name: push master ssl docker
-        run: docker push tarscloud/base-compiler-ssl:master
-      - name: push latest ssl docker
-        run: docker tag tarscloud/base-compiler-ssl:master tarscloud/base-compiler-ssl:latest && docker push tarscloud/base-compiler-ssl:latest
-
-
+        run: cd compiler && docker buildx build . -f base-compiler-ssl.Dockerfile -t tarscloud/base-compiler-ssl:latest --build-arg BRANCH=master --platform=linux/amd64,linux/arm64 -o type=docker --push
