--- a/.github/workflows/build-compiler-release-2.4.yml
+++ b/.github/workflows/build-compiler-release-2.4.yml
@@ -1,6 +1,5 @@
 name: build-base-compiler-release-2.4
 
-
 on:
   push:
     branches:
@@ -21,10 +20,10 @@ on:
       - "compiler/tools/helm-template/*"
       - "compiler/tools/helm-lib/*"
       - "compiler/base-compiler.Dockerfile"
-      
+
 jobs:
   build:
-    runs-on: ubuntu-20.04 
+    runs-on: ubuntu-20.04
     steps:
       - name: env
         run: env
@@ -33,8 +32,11 @@ jobs:
       - uses: actions/checkout@v1
       - name: login docker hub
         run: docker login -u ${{ secrets.name }} -p ${{ secrets.pass }}
+      - name: prepare docker
+        run: |
+          export DOCKER_CLI_EXPERIMENTAL=enabled 
+          docker buildx create --use --name builder
+          docker buildx inspect builder --bootstrap
+          docker run --rm --privileged docker/binfmt:a7996909642ee92942dcd6cff44b9b95f08dad64
       - name: Build docker
-        run: cd compiler && docker build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:v2.4 --build-arg BRANCH=release/2.4
-      - name: push release/2.4 docker
-        run: docker push tarscloud/base-compiler:v2.4
-
+        run: cd compiler && docker buildx build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:v2.4 --build-arg BRANCH=release/2.4 --platform=linux/amd64,linux/arm64  -o type=docker --push
