--- a/.github/workflows/build-deploy-tag.yml
+++ b/.github/workflows/build-deploy-tag.yml
@@ -4,10 +4,10 @@ on:
   push:
     tags:
       - v*
-      
+
 jobs:
   build:
-    runs-on: ubuntu-20.04 
+    runs-on: ubuntu-20.04
     steps:
       - name: env
         run: env
@@ -19,8 +19,11 @@ jobs:
       #   continue-on-error: true
       - name: login docker hub
         run: docker login -u ${{ secrets.name }} -p ${{ secrets.pass }}
+      - name: prepare docker
+        run: |
+          export DOCKER_CLI_EXPERIMENTAL=enabled 
+          docker buildx create --use --name builder
+          docker buildx inspect builder --bootstrap
+          docker run --rm --privileged docker/binfmt:a7996909642ee92942dcd6cff44b9b95f08dad64
       - name: Build docker
-        run: cd compiler && docker build . -f base-deploy.Dockerfile -t tarscloud/base-deploy:${{ steps.get_version.outputs.VERSION }}
-      - name: push master docker
-        run: docker push tarscloud/base-deploy:${{ steps.get_version.outputs.VERSION }}
-
+        run: cd compiler && docker buildx build . -f base-deploy.Dockerfile -t tarscloud/base-deploy:${{ steps.get_version.outputs.VERSION }} --platform=linux/amd64,linux/arm64  -o type=docker --push
