--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,6 +1,5 @@
 name: build-base-deploy
 
-
 on:
   push:
     branches:
@@ -21,10 +20,10 @@ on:
       - "compiler/tools/helm-lib/*"
       - "compiler/tools/*"
       - "compiler/base-deploy.Dockerfile"
-      
+
 jobs:
   build:
-    runs-on: ubuntu-20.04 
+    runs-on: ubuntu-20.04
     steps:
       - name: env
         run: env
@@ -33,8 +32,11 @@ jobs:
       #   continue-on-error: true
       - name: login docker hub
         run: docker login -u ${{ secrets.name }} -p ${{ secrets.pass }}
+      - name: prepare docker
+        run: |
+          export DOCKER_CLI_EXPERIMENTAL=enabled 
+          docker buildx create --use --name builder
+          docker buildx inspect builder --bootstrap
+          docker run --rm --privileged docker/binfmt:a7996909642ee92942dcd6cff44b9b95f08dad64
       - name: Build docker
-        run: cd compiler && docker build . -f base-deploy.Dockerfile -t tarscloud/base-deploy
-      - name: push master docker
-        run: docker push tarscloud/base-deploy
-
+        run: cd compiler && docker buildx build . -f base-deploy.Dockerfile -t tarscloud/base-deploy --platform=linux/amd64,linux/arm64  -o type=docker --push
