--- a/.github/workflows/build-compiler-release-3.0.yml
+++ b/.github/workflows/build-compiler-release-3.0.yml
@@ -39,4 +39,4 @@ jobs:
           docker buildx inspect builder --bootstrap
           docker run --rm --privileged docker/binfmt:a7996909642ee92942dcd6cff44b9b95f08dad64
       - name: Build docker
-        run: cd compiler && docker buildx build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:v3.0 --build-arg BRANCH=release/3.0 --platform=linux/amd64,linux/arm64  -o type=docker --push
+        run: cd compiler && docker buildx build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:v3.0 --build-arg BRANCH=release/3.0 --platform=linux/amd64,linux/arm64 --push
