Fix: build-compiler-master.yml context

--- a/.github/workflows/build-compiler-master.yml
+++ b/.github/workflows/build-compiler-master.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: "compiler"
+          context: "{{defaultContext}}:compiler"
           push: true
           tags: tarscloud/base-compiler:latest
           file: base-compiler.Dockerfile
