--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -1,19 +1,19 @@
 name: e2e
 on:
   push:
-    branches: [ master ]
-    paths-ignore: [ docs/**,charts/** ]
+    branches: [master]
+    paths-ignore: [docs/**, charts/**, .github/workflows/build-compiler*]
   pull_request:
-    branches: [ master ]
-    paths-ignore: [ docs/**,charts/** ]
+    branches: [master]
+    paths-ignore: [docs/**, charts/**, .github/workflows/build-compiler*]
 
 jobs:
   e2e:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ ubuntu-20.04 ]
-        storage_crd_version: [ v1beta1,v1beta2,v1beta3 ]
+        platform: [ubuntu-20.04]
+        storage_crd_version: [v1beta1, v1beta2, v1beta3]
     runs-on: ${{matrix.platform}}
     timeout-minutes: 90
     env:
