--- a/.github/workflows/build-compiler-master-buster.yml
+++ b/.github/workflows/build-compiler-master-buster.yml
@@ -41,8 +41,27 @@ jobs:
           push: true
           tags: tarscloud/base-compiler-buster:latest
           file: base-compiler-buster.Dockerfile
-          build-args: BRANCH=master
+          build-args: BRANCH=master,TARS_SSL=OFF
           platforms: linux/amd64,linux/arm64
 
-      # - name: Build docker
-      #   run: cd compiler && docker buildx build . -f base-compiler-buster.Dockerfile -t tarscloud/base-compiler-buster:latest --build-arg BRANCH=master --platform=linux/amd64 --push
+  build-ssl:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: env
+        run: env
+      - uses: actions/checkout@v1
+      - name: login docker hub
+        run: docker login -u ${{ secrets.name }} -p ${{ secrets.pass }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: "{{defaultContext}}:compiler"
+          push: true
+          tags: tarscloud/base-compiler-buster-ssl:latest
+          file: base-compiler-buster.Dockerfile
+          build-args: BRANCH=master,TARS_SSL=ON
+          platforms: linux/amd64,linux/arm64
