--- a/.github/workflows/build-compiler-master.yml
+++ b/.github/workflows/build-compiler-master.yml
@@ -1,4 +1,4 @@
-name: build-base-compiler-master
+name: build-compiler-master-bullseye
 
 on:
   push:
@@ -39,9 +39,31 @@ jobs:
         with:
           context: "{{defaultContext}}:compiler"
           push: true
-          tags: tarscloud/base-compiler:latest
-          file: base-compiler.Dockerfile
-          build-args: BRANCH=master
+          tags: tarscloud/base-compiler-bullseye:latest
+          file: base-compiler-bullseye.Dockerfile
+          build-args: BRANCH=master,TARS_SSL=OFF
+          platforms: linux/amd64,linux/arm64
+
+  build-ssl:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: env
+        run: env
+      - uses: actions/checkout@v1
+      - name: login docker hub
+        run: docker login -u ${{ secrets.name }} -p ${{ secrets.pass }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: "{{defaultContext}}:compiler"
+          push: true
+          tags: tarscloud/base-compiler-bullseye-ssl:latest
+          file: base-compiler-bullseye.Dockerfile
+          build-args: BRANCH=master,TARS_SSL_ON
           platforms: linux/amd64,linux/arm64
       # - name: Build docker
       #   run: cd compiler && docker buildx build . -f base-compiler.Dockerfile -t tarscloud/base-compiler:latest --build-arg BRANCH=master --platform=linux/amd64,linux/arm64 --push
